# chat-potato

./: .bashrc  .gitignore  Dockerfile.dev  README.md  apt-packages.deb.txt  compose.yaml  package-lock.json  package.json
server/: manage.py  pyproject.toml
server/account/: admin.py  authentication.py  jwt_middleware.py  models.py  serializers.py  views.py
server/account/migrations/: 0001_initial.py  0002_profile_version.py
server/account/templates/: account_login.html  base.html
server/chat/: admin.py  models.py  serializers.py  views.py  ws.py
server/chat/migrations/: 0001_initial.py  0002_organization_moderators_organization_owners.py  0003_message.py  0004_profile.py  0005_alter_profile_user.py  0006_delete_profile.py  0007_auto_20230703_2018.py  0008_alter_room_name_alter_topic_name_and_more.py  0009_alter_topic_name.py  0010_room_ktopic_created.py  0011_remove_room_ktopic_created.py  0012_message_morder.py  0013_auto_20230804_2239.py  0014_alter_message_unique_together.py
server/cpot/: asgi.py  settings.py  urls.py  urls_apiv1.py  wsgi.py
web/: api.js  app.js  app.vue  index.html  store.js
web/components/: chat-input.vue  login.vue  room-list.vue  room-viewer.vue
web/store/: index.js  ws-connect.js
