[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Paul Bailey", email = "paul@neutron.studio"},
]
dependencies = [
    "django>=4.2.1",
    "dj-database-url>=2.0.0",
    "psycopg2-binary>=2.9.6",
]
requires-python = ">=3.10"
license = {text = "BSDv3"}

[tool]
[tool.pdm]
[tool.pdm.scripts]
_.env_file = ".env"
req = "pdm export -o requirements.txt --without-hashes --prod"
